# wind-flow

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.c  main.c_template
cycle_master/: cycle_master.c
cycle_master/include/: cycle_master.h
examples/example_1/: CMakeLists.txt  main.c
include/: wind_flow.h
src/: cycle_master.c  wind_flow.c
